syntax = "proto3";
package player;
option go_package = "/player;pb_player";

// 登录请求参数
message LoginRequest{
  uint64 UId = 1;
}
// 登录请求响应
message LoginReply{
  bool Ok = 1;
}

// 添加好友请求参数
message AddFriedRequest{
  uint64 UId = 1; //玩家ID
}
// 添加好友请求响应
message AddFriedReply{
  string Desc = 1; //请求成功与否描述
}

// 删除好友请求参数
message DelFriedRequest{
  uint64 UId = 1; //要删除的好友ID
}
// 删除好友请求响应
message DelFriendReply{
  uint64 Desc = 1;//请求响应
}

// 发送消息请求参数
message SendChatMsgRequest{
  uint64 UId = 1;
  ChatMessage msg = 2; // 消息体
  int32 Category = 3; // 聊天类型
}
// 发送消息请求响应
message SendChatMsgReply{

}

//游戏消息体
message ChatMessage{
  //消息内容
  string Content = 1; //文本类型消息
  repeated bytes extra = 2; //字节类型消息
}